# node-flow

./: LICENSE  README.md  pyproject.toml
doc/: nodeflow_spec.md
examples/nodes/hello/: config.yaml  node.py  node.yaml
examples/pipelines/: hello.yaml
nodeflow/: __init__.py  cli.py  config.py  context.py  loader.py  loop_node.py  node.py  pipeline_node.py  runner.py  updates.py
nodeflow/sdk/: __init__.py
nodes/hello/: node.py
